# pin2_s2022

./: .gitignore  README.md
01_WarmupAlienDirectory/: CMakeLists.txt  Warmup_AlienDictionary.cbp  main.c
